--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
+    "geolib": "^3.3.3",
+    "mapbox-gl": "^2.13.0",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.8.0",
+    "react-map-gl": "^7.0.21"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
