--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
+    "axios": "^1.3.4",
+    "cheerio": "^1.0.0-rc.12",
     "geolib": "^3.3.3",
     "mapbox-gl": "^2.13.0",
     "next": "latest",
+    "pexels": "^1.4.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.8.0",
